# net-watch

./: .gitignore  alembic.ini  main.py  package-lock.json  pyproject.toml  requirements.txt
alembic/versions/: 95bf47864796_dodanie_user_id_do_devices.py  a9a14b38676f_change_name_from_user_id_to_owner_id_in_.py
app/: auth.py  crud.py  database.py  devices.py  main.py  models.py  ping_worker.py  schemas.py  users.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  axios.ts  devices.ts
frontend/src/pages/: DeviceDetailsPage.tsx  DevicesPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/utils/: token.ts
